--- a/sausage.yml
+++ b/sausage.yml
@@ -6,10 +6,12 @@ modules:
     http:
       ip_protocol_fallback: true
       preferred_ip_protocol: "ipv4"
+
 include:
   - targets.yml
 
-targets:
-  - 172.17.0.2:9200
-  - 172.17.0.3:9200
-  - 172.17.0.4:9200
+# Can create static lists here, or include  separately
+#targets:
+#  - 172.17.0.2:9200
+#  - 172.17.0.3:9200
+#  - 172.17.0.4:9200
