--- a/glide.yaml
+++ b/glide.yaml
@@ -16,5 +16,9 @@ import:
 - package: github.com/beorn7/perks
   subpackages:
   - quantile
+- package: github.com/prometheus/prometheus
+  version: ^2.7.1
+- package: github.com/pkg/errors
+  version: ^0.8.1
 testImport:
 - package: gopkg.in/check.v1
