--- a/dragnet.yml
+++ b/dragnet.yml
@@ -10,6 +10,16 @@ modules:
 include:
   - targets.yml
 
+autotargets:
+  dcos:
+    service_name: "/dragnet"
+    servers:
+      - http://master.mesos:8080
+    refresh_interval: 60s
+    basic_auth:
+      username: env:AUTH_USER
+      password: env:AUTH_PASSWORD
+
 # Can create static lists here, or include  separately
 targets:
   - 172.17.0.2:9600
