--- a/targets.yml
+++ b/targets.yml
@@ -1,5 +1,5 @@
 ---
-targets:
-  - 172.17.0.2:9200
-  - 172.17.0.5:9200
-  - 172.17.0.9:9200
+#targets:
+#  - 172.17.0.2:9200
+#  - 172.17.0.5:9200
+#  - 172.17.0.9:9200
